--- a/assets/style.css
+++ b/assets/style.css
@@ -1,17 +1,34 @@
+
 body, h1, h2, p, ul, li {
     margin: 0;
     padding: 0;
 }
 
+/* Animated Gradient Background */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    color: #333;
+    background: linear-gradient(135deg, rgb(201, 1, 1), #ed8f03, #ff6600);
+    background-size: 200% 200%;
+    animation: gradientAnimation 10s ease infinite;
+    color:black;
 }
+
+@keyframes gradientAnimation {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
 
 /* Navigation Styles */
 nav {
-    background-color: #333;
+    background-color: #131212;
     color: #fff;
     padding: 20px 0;
 }
@@ -50,7 +67,8 @@ header h1 {
 
 header img {
     border-radius: 50%;
-    max-width: 300px;
+    border: 5px solid #050101;
+    max-width: 400px;
     height: auto;
 }
 
@@ -58,16 +76,21 @@ header img {
 /* About Section */
 #about {
     padding: 40px;
+}
+
+#about h2 {
+    text-align: center;
+}
+
+.about-container {
+    max-width: 1000px;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 18px;
+    line-height: 1.5;
+    padding: 20px;
     background-color: #fff;
-  }
-  
-  .about-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    gap: 20px;
-  }
+}
   
   .about-text {
     max-width: 1000px;
@@ -76,6 +99,10 @@ header img {
     line-height: 1.5;
     margin: 0 auto;
   }
+
+  .about-container .row.justify-center {
+    background: none;
+}
 
 
 /* Section Styles */
@@ -105,10 +132,18 @@ section p {
     border-radius: 4px;
 }
 
+#contact {
+    background-color: #7c0404;
+    border: 6px solid #050101;
+    padding: 50px;
+    color: #ddd;
+    text-align: center;
+    font-size: small;
+}
 footer {
     text-align: center;
     font-size: 20px;
-    padding: 10px 0;
+    padding: 50px 0;
     background-color: #333;
     color: #fff;
 }
@@ -128,11 +163,11 @@ footer {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    padding: 20px;
+    padding: 100px;
     margin: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    background-color: #fff;
+    border: 10px solid #ddd;
+    border-radius: 30px;
+    background-color: #ffa454;
 }
 
 .project-item img {
